--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,7 +103,7 @@ jobs:
 
         echo "BUILD_VERSION=$versionInfo" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     -
-      name: Create SiriKali.git.zip
+      name: Create SiriKali.git.exe.zip
       run: |
         New-Item -ItemType Directory -Path ${{github.workspace}}\SiriKali.git
         New-Item -ItemType Directory -Path ${{github.workspace}}\SiriKali.git/local
@@ -120,7 +120,7 @@ jobs:
 
         echo "$bb" | Out-File -FilePath ${{github.workspace}}\SiriKali.git\version_info.txt -Encoding utf8 -Append
 
-        Compress-Archive -Path ${{github.workspace}}\SiriKali.git -DestinationPath ${{github.workspace}}\SiriKali.git.zip
+        Compress-Archive -Path ${{github.workspace}}\SiriKali.git -DestinationPath ${{github.workspace}}\SiriKali.git.exe.zip
 
         Remove-Item -Path ${{github.workspace}}\SiriKali.git\local
 
