--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
       env:
         CMAKE_PREFIX_PATH: "${{github.workspace}}/qt5/Qt/${{ env.QT5_VERSION }}"
         msystem: MINGW32
-      run: cmake -DOUTPUT_BASE_NAME=SiriKaliQt5 -DLIBRARIES_LOCATION=${{github.workspace}}\SiriKali.git\ -DOUTPUT_PATH=${{github.workspace}}\ -DSOURCE_PATH=${{github.workspace}}\SiriKali\ -DCMAKE_VERBOSE_MAKEFILE=TRUE -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -G "CodeBlocks - MinGW Makefiles" -S ${{github.workspace}}/SiriKali/ -B ${{github.workspace}}/SiriKali/build5
+      run: cmake -DOUTPUT_BASE_NAME=SiriKaliQt5 -DBUILD_WITH_QT6=false -DLIBRARIES_LOCATION=${{github.workspace}}\SiriKali.git\ -DOUTPUT_PATH=${{github.workspace}}\ -DSOURCE_PATH=${{github.workspace}}\SiriKali\ -DCMAKE_VERBOSE_MAKEFILE=TRUE -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -G "CodeBlocks - MinGW Makefiles" -S ${{github.workspace}}/SiriKali/ -B ${{github.workspace}}/SiriKali/build5
     -
       name: Print installer script for Qt5
       run : get-content ${{github.workspace}}\SiriKali\build5\sirikali_windows_installer_Qt5.iss
@@ -125,3 +125,78 @@ jobs:
         Remove-Item -Path ${{github.workspace}}\SiriKali.git\local
 
         Remove-Item -Path ${{github.workspace}}\SiriKali.git\version_info.txt
+    -
+      name: Make installer for Qt5
+      uses: Minionguyjpro/Inno-Setup-Action@v1.2.2
+      with:
+          path: SiriKali/build5/sirikali_windows_installer_Qt5.iss
+    -
+         name: Install Qt6
+      uses: jurplel/install-qt-action@v3
+      with:
+        version: ${{ env.QT6_VERSION }}
+        arch: ${{ env.MINGW6_VERSION }}
+        dir: "${{github.workspace}}/qt6"
+        install-deps: "true"
+        host: 'windows'
+        target: 'desktop'
+        tools: 'tools_mingw1310'
+    -
+      name: update env for Qt6
+      run: echo "${{github.workspace}}/qt6/Qt/Tools/mingw1310_64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+    -
+      name: Check GCC version and path for Qt6
+      run: |
+          Write-Output (Get-Command c++.exe).Path
+          c++.exe --version
+    -
+      name: Configure CMake for Qt6
+      env:
+        CMAKE_PREFIX_PATH: "${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}"
+        msystem: MINGW32
+      run: cmake -DOUTPUT_BASE_NAME=SiriKaliQt6 -DLIBRARIES_LOCATION=${{github.workspace}}\SiriKaliQt6.git\ -DOUTPUT_PATH=${{github.workspace}}\ -DSOURCE_PATH=${{github.workspace}}\SiriKali\ -DBUILD_WITH_QT6=true -DCMAKE_VERBOSE_MAKEFILE=TRUE -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -G "CodeBlocks - MinGW Makefiles" -S ${{github.workspace}}/SiriKali/ -B ${{github.workspace}}/SiriKali/build6
+    -
+      name: Print installer script for Qt6
+      run : get-content ${{github.workspace}}\SiriKali\build6\sirikali_windows_installer_Qt6.iss
+    -
+      name: Update version.h for Qt6
+      run: |
+          $content = [System.IO.File]::ReadAllText("${{github.workspace}}\SiriKali\build6\version.h").Replace("git_tag",${{ env.GIT_VERSION_NUMBER }})
+          [System.IO.File]::WriteAllText("${{github.workspace}}\SiriKali\build6\version.h",$content )
+    -
+      name: Build Project for Qt6
+      run: cmake --build ${{github.workspace}}/SiriKali/build6
+    -
+      name: Create SiriKaliQt6.git.exe.zip
+      run: |
+        New-Item -ItemType Directory -Path ${{github.workspace}}\SiriKaliQt6.git
+        New-Item -ItemType Directory -Path ${{github.workspace}}\SiriKaliQt6.git/local
+
+        Copy-Item -Path ${{github.workspace}}\SiriKali\translations -Destination ${{github.workspace}}\SiriKaliQt6.git -Recurse
+        Copy-Item -Path ${{github.workspace}}\SiriKali\build6\sirikali.exe -Destination ${{github.workspace}}\SiriKaliQt6.git
+
+        Set-Location ${{github.workspace}}\SiriKaliQt6.git
+
+        ${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/${{ env.MINGW6_PATH }}/bin/windeployqt6.exe ${{github.workspace}}\SiriKaliQt6.git\sirikali.exe
+
+        $bb = ${{ env.BUILD_VERSION }}
+        $bb = $bb.Trim()
+
+        echo "$bb" | Out-File -FilePath ${{github.workspace}}\SiriKaliQt6.git\version_info.txt -Encoding utf8 -Append
+
+        Compress-Archive -Path ${{github.workspace}}\SiriKaliQt6.git -DestinationPath ${{github.workspace}}\SiriKaliQt6.git.exe.zip
+
+        Remove-Item -Path ${{github.workspace}}\SiriKaliQt6.git\local
+
+        Remove-Item -Path ${{github.workspace}}\SiriKaliQt6.git\version_info.txt
+    -
+      name: Make installer for Qt6
+      uses: Minionguyjpro/Inno-Setup-Action@v1.2.2
+      with:
+          path: SiriKali/build6/sirikali_windows_installer_Qt6.iss
+    -
+      name: Rename installers
+      run: |
+          Rename-Item -Path ${{github.workspace}}\SiriKaliQt5.exe -NewName ${{github.workspace}}\SiriKaliQt5.git.setup.exe
+          Rename-Item -Path ${{github.workspace}}\SiriKaliQt6.exe -NewName ${{github.workspace}}\SiriKaliQt6.git.setup.exe
+    -
