fix a build issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ set( PGR_VERSION "1.5.1" )
 set( COPYRIGHT_YEARS "2016-2024" )
 
 set( CMAKE_CXX_STANDARD 14 )
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_AUTOUIC ON)
 
 option(BUILD_WITH_QT6 "Build with Qt 6" OFF)
 
@@ -137,7 +141,7 @@ if(BUILD_WITH_QT6)
 		message( STATUS "Found Qt6Widgets, version  ${Qt6Widgets_VERSION}" )
 		message( STATUS "Found Qt6Core, version  ${Qt6Core_VERSION}" )
 		message( STATUS "Found Qt6Network, version  ${Qt6Network_VERSION}" )
-	endif() 
+	endif()
    		SET (QTVERSION "${Qt6Core_VERSION}" )
 else()
 	if( UNIX AND NOT APPLE )
