--- a/src/3rdParty/lxqt_wallet/frontend/CMakeLists.txt
+++ b/src/3rdParty/lxqt_wallet/frontend/CMakeLists.txt
@@ -52,9 +52,9 @@ else()
 endif()
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 10.0.0 )
-	set( CMAKE_CXX_STANDARD 20 )
+	set( CMAKE_CXX_STANDARD 14 )
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang"  AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 10.0.0)
-	set( CMAKE_CXX_STANDARD 20 )
+	set( CMAKE_CXX_STANDARD 14 )
 else()
 	set( CMAKE_CXX_STANDARD 14 )
                 if(${CMAKE_VERSION} VERSION_LESS "3.1.0")
@@ -65,6 +65,10 @@ endif()
 
 set( CMAKE_CXX_STANDARD_REQUIRED ON )
 set( CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_AUTOUIC ON)
 
 if(NOKDESUPPORT)
     SET(KWALLET_SUPPORT "false")
@@ -106,34 +110,24 @@ set(COMMON_UI_FILES  changepassworddialog.ui password_dialog.ui)
 set(COMMON_MOC_FILES task.h changepassworddialog.h password_dialog.h)
 set(COMMON_SRC_FILES changepassworddialog.cpp password_dialog.cpp lxqt_windows_dpapi.cpp lxqt_internal_wallet.cpp lxqt_wallet.cpp lxqt_osx_keychain.cpp)
 
-if(BUILD_WITH_QT6)
-
-    Qt6_WRAP_UI(UI ${COMMON_UI_FILES})
-    Qt6_WRAP_CPP(MOC ${COMMON_MOC_FILES})
-else()
-
-    Qt5_WRAP_UI(UI ${COMMON_UI_FILES})
-    Qt5_WRAP_CPP(MOC ${COMMON_MOC_FILES})
-endif()
-
 if(KWALLET_SUPPORT)
-    Qt5_WRAP_CPP(MOC_KWALLET lxqt_kwallet.h)
+    set(MOC_KWALLET lxqt_kwallet.h)
     set(KWALLET_COMMON lxqt_kwallet.cpp)
     if(SECRET_SUPPORT)
-	add_library(lxqt-wallet STATIC ${KWALLET_COMMON} lxqt_libsecret.cpp ${UI} ${COMMON_SRC_FILES} ${MOC} ${MOC_KWALLET})
+	add_library(lxqt-wallet STATIC ${KWALLET_COMMON} lxqt_libsecret.cpp ${COMMON_UI_FILES} ${COMMON_SRC_FILES} ${COMMON_MOC_FILES} ${MOC_KWALLET})
 	target_link_libraries(lxqt-wallet secretlib)
     else()
-	add_library(lxqt-wallet STATIC ${KWALLET_COMMON} ${UI} ${COMMON_SRC_FILES} ${MOC} ${MOC_KWALLET})
+	add_library(lxqt-wallet STATIC ${KWALLET_COMMON} ${COMMON_UI_FILES} ${COMMON_SRC_FILES} ${COMMON_MOC_FILES} ${MOC_KWALLET})
     endif()
     target_link_libraries(lxqt-wallet KF5::Wallet)
 else()
-    Qt5_WRAP_CPP(MOC_KWALLET_DBUS lxqt_kwallet-dbus.h)
+    set(MOC_KWALLET_DBUS lxqt_kwallet-dbus.h)
     set(KWALLET_DBUS lxqt_kwallet-dbus.cpp)
     if(SECRET_SUPPORT)
-	add_library(lxqt-wallet STATIC lxqt_libsecret.cpp ${KWALLET_DBUS} ${UI} ${COMMON_SRC_FILES} ${MOC} ${MOC_KWALLET_DBUS})
+	add_library(lxqt-wallet STATIC lxqt_libsecret.cpp ${KWALLET_DBUS} ${COMMON_UI_FILES} ${COMMON_SRC_FILES} ${COMMON_MOC_FILES} ${MOC_KWALLET_DBUS})
 	target_link_libraries(lxqt-wallet secretlib)
     else()
-	add_library(lxqt-wallet STATIC ${UI} ${COMMON_SRC_FILES} ${KWALLET_DBUS} ${MOC} ${MOC_KWALLET_DBUS})
+	add_library(lxqt-wallet STATIC ${COMMON_UI_FILES}${COMMON_SRC_FILES} ${KWALLET_DBUS} ${COMMON_MOC_FILES}${MOC_KWALLET_DBUS})
     endif()
 endif()
 
