--- a/.github/workflows/buildGit.yml
+++ b/.github/workflows/buildGit.yml
@@ -1,4 +1,4 @@
-name: build
+name: buildGit
 
 on:
   push:
@@ -199,7 +199,7 @@ jobs:
       run: |
           Rename-Item -Path ${{github.workspace}}\SiriKaliQt5.exe -NewName ${{github.workspace}}\SiriKaliQt5.git.setup.exe
           Rename-Item -Path ${{github.workspace}}\SiriKaliQt6.exe -NewName ${{github.workspace}}\SiriKaliQt6.git.setup.exe
-    -        
+    -
       name: Post Releases
       uses: ncipollo/release-action@v1
       with:
