--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -42,5 +42,8 @@ jobs:
       name: Build
       run: |
           cmake --build ${{github.workspace}}/MAC/build6
+          echo --------------
           ls ${{github.workspace}}/MAC/build6
+          echo --------------
           ls ${{github.workspace}}/MAC
+          echo --------------
