--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -365,29 +365,29 @@ endif()
 
 if( APPLE )
 
-    SET( plugin_dest_dir sirikali.app/Contents/MacOS )
-    SET( qtconf_dest_dir sirikali.app/Contents/Resources )
+    SET( plugin_dest_dir media-downloader.app/Contents/MacOS )
+    SET( qtconf_dest_dir media-downloader.app/Contents/Resources )
     SET( APPS "\${CMAKE_INSTALL_PREFIX}/media-downloader.app" )
 
     set_target_properties( media-downloader PROPERTIES MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/src/MacOSXBundleInfo.plist.in" )
 
     install( TARGETS media-downloader BUNDLE DESTINATION . COMPONENT Runtime )
 
-    file( COPY src/media-downloader.icns DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/ar.qm DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/de_DE.qm DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/en_US.qm DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/es.qm DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/fr_FR.qm DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/it_IT.qm DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/ja_JP.qm DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/nl_NL.qm DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/pl_PL.qm DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/pt_BR.qm DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/ru_RU.qm DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/sv_SE.qm DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/tr_TR.qm DESTINATION "sirikali.app/Contents/Resources/" )
-    file( COPY translations/zh_CN.qm DESTINATION "sirikali.app/Contents/Resources/" )
+    file( COPY src/media-downloader.icns DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/ar.qm DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/de_DE.qm DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/en_US.qm DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/es.qm DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/fr_FR.qm DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/it_IT.qm DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/ja_JP.qm DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/nl_NL.qm DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/pl_PL.qm DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/pt_BR.qm DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/ru_RU.qm DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/sv_SE.qm DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/tr_TR.qm DESTINATION "media-downloader.app/Contents/Resources/" )
+    file( COPY translations/zh_CN.qm DESTINATION "media-downloaderapp/Contents/Resources/" )
 
     file( COPY changelog DESTINATION "media-downloader.app/Contents/Resources/" )
 endif()
