--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -37,17 +37,20 @@ jobs:
       name: Configure CMake
       env:
         CMAKE_PREFIX_PATH: "${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}"
-      run: cmake -DBUILD_WITH_QT6=true -DOUTPUT_BASE_NAME=MediaDownloaderQt6 -DLIBRARIES_LOCATION=${{github.workspace}}/MediaDownloader.git/ -DOUTPUT_PATH=${{github.workspace}}/ -DSOURCE_PATH=${{github.workspace}}/MAC/ -DCMAKE_VERBOSE_MAKEFILE=FALSE -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -S ${{github.workspace}}/MAC/ -B ${{github.workspace}}/MAC/build6
+      run: cmake -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/media-downloader -DBUILD_WITH_QT6=true -DOUTPUT_BASE_NAME=MediaDownloaderQt6 -DLIBRARIES_LOCATION=${{github.workspace}}/MediaDownloader.git/ -DOUTPUT_PATH=${{github.workspace}}/ -DSOURCE_PATH=${{github.workspace}}/MAC/ -DCMAKE_VERBOSE_MAKEFILE=FALSE -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -S ${{github.workspace}}/MAC/ -B ${{github.workspace}}/MAC/build6
     - 
       name: Build
       run: |
           cmake --build ${{github.workspace}}/MAC/build6
+          cmake --install ${{github.workspace}}/MAC/build6
           echo --------------
           ls ${{github.workspace}}/MAC/build6
           echo --------------
           ls ${{github.workspace}}/MAC
           echo --------------
           ls ${{github.workspace}}
+          echo --------------
+          ls ${{github.workspace}}/media-downloader/*
     -  
       name: Post Releases
       uses: ncipollo/release-action@v1
