--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -40,23 +40,14 @@ jobs:
       run: cmake -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/media-downloader -DBUILD_WITH_QT6=true -DOUTPUT_BASE_NAME=MediaDownloaderQt6 -DLIBRARIES_LOCATION=${{github.workspace}}/MediaDownloader.git/ -DOUTPUT_PATH=${{github.workspace}}/ -DSOURCE_PATH=${{github.workspace}}/MAC/ -DCMAKE_VERBOSE_MAKEFILE=FALSE -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -S ${{github.workspace}}/MAC/ -B ${{github.workspace}}/MAC/build6
     - 
       name: Build
+      run: cmake --build ${{github.workspace}}/MAC/build6
+    - 
+      name: Make bundle
       run: |
-          cmake --build ${{github.workspace}}/MAC/build6
-          cmake --install ${{github.workspace}}/MAC/build6
-          echo --------------
-          ls ${{github.workspace}}/MAC/build6
-          echo --------------
-          ls ${{github.workspace}}/MAC
-          echo --------------
-          ls ${{github.workspace}}
-          echo --------------
-          ls ${{github.workspace}}/media-downloader/*
-    -  
-      name: Post Releases
-      uses: ncipollo/release-action@v1
-      with:
-        artifacts: ${{github.workspace}}/MAC/build6/media-downloader
-        tag: "0.0.0"
-        commit: "main"
-        allowUpdates: true
-        body: "Mac build"
+             ls ${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/*
+             echo "--------------"
+             mkdir ${{github.workspace}}/MediaDownloader
+             cp ${{github.workspace}}/MAC/build6/media-downloader ${{github.workspace}}/MediaDownloader/
+             cd ${{github.workspace}}/MediaDownloader
+             ${{github.workspace}}/qt6/Qt/${{ env.QT6_VERSION }}/macos/bin/macdeployqt media-downloader
+             ls ${{github.workspace}}/MediaDownloader
